fix text alignment header

--- a/src/styles/home/index_large.css
+++ b/src/styles/home/index_large.css
@@ -183,6 +183,7 @@ header {
     line-height: 1.5rem;
     margin-bottom: 0;
     padding-bottom: 0;
+    padding-left: 0.21rem;
 }
 
 h1 {
@@ -196,6 +197,10 @@ h1 {
 h2 {
     font-family: 'futuraheavy', sans-serif;
     font-size: 2rem;
+}
+
+#header-text h2 {
+    padding-left: 0.21rem;
 }
 
 header .role {
