--- a/src/styles/home/index_small.css
+++ b/src/styles/home/index_small.css
@@ -111,7 +111,7 @@
 
 body {
     font-family: 'futurabook', sans-serif;
-    font-size: 1.5rem;
+    font-size: 1rem;
     background-color: var(--primary_color_50);
     margin: 0;
 }
@@ -185,6 +185,7 @@ header, #contact {
     line-height: 1.5rem;
     margin-bottom: 0;
     padding-bottom: 0;
+    padding-left: 0.17rem;
 }
 
 h1 {
@@ -198,6 +199,10 @@ h1 {
 h2 {
     font-family: 'futuraheavy', sans-serif;
     font-size: 2rem;
+}
+
+#header-text h2 {
+    padding-left: 0.13rem;
 }
 
 header .role {
